CRT PLL emulation

--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="..\..\..\..\include\alfe\type.h" />
     <ClInclude Include="..\..\..\..\include\alfe\user.h" />
     <ClInclude Include="..\..\..\..\include\alfe\vectors.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\wrap.h" />
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\..\include\alfe.natvis" />
