Fix colours, CGAD loading

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -99,11 +99,6 @@ phase = 1;
 
 // Matching options
 
-// Set to true to try to match the input picture as closely as possible
-// Set to false to show how an existing CGA RGBI image would look on the
-// composite output.
-matchMode = !bitmapIsRGBI(inputPicture);
-
 // Character set to use for matching in text modes:
 //   0 = 0xdd                 160x100x16
 //   1 = 0x13/0x55             80x100x512  composite
@@ -134,14 +129,14 @@ temporalDiffusion = 0;
 //   2 = Composite (new)
 // New CGA cards have a lower chroma amplitude and the text mode colours show
 // up as more different shades of grey on a monochrome monitor.
-connector = 1;
+connector = bitmapIsRGBI(inputPicture) ? 0 : 1;
 
 
 // NTSC decoding options
 
-contrast = 1;
+contrast = 100;
 brightness = 0;
-saturation = 1;
+saturation = 100;
 hue = 0;
 chromaBandwidth = 1;  // units of colour carrier frequency /8
 lumaBandwidth = 1;  // units of colour carrier frequency
