Image resizing work

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -3,14 +3,10 @@
 inputPicture = arguments[1];
 cgaROM = "5788005.u33";
 
-// Set to true for 7.16MHz input pixel rate (e.g. 320x200 image)
-// Set to false for 14.32MHz input pixel rate (e.g. 640x200 image)
-doubleWidth = inputPicture.size.x <= 456;
-
-// Set to true if input pixel rows correspond to scanlines (e.g. 640x200 image)
-// Set to false if input pixel rows correspond to half-scanlines (e.g. 640x400
-// image)
-doubleHeight = inputPicture.size.y <= 262;
+// Resample the input picture to this size before matching. Measured in hdots
+// horizontally and scanlines vertically.
+activeSize.x = inputPicture.size.x*(inputPicture.size.x <= 456 ? 2 : 1);
+activeSize.y = inputPicture.size.y*(inputPicture.size.y <= 262 ? 2 : 1)/2;
 
 
 // CGA mode configuration
