Input image resampling

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -60,33 +60,20 @@ scanlinesPerRow = 2;
 // real CGA card.
 scanlinesRepeat = 1;
 
-// CRTC interlace mode register value:
-// No interlace sync (scanlines in same position on both fields)
+// Interlace mode:
 //   0 = None (non-interlaced, like standard CGA modes)
-//   1 = Flicker (alternate between two VRAM regions)
-//   4 = Even scanlines within row only
-//   5 = Odd scanlines within row only
-//   6 = Video (alternate between even and odd scanlines)
-//   7 = Video and flicker
-//  10 = Even flicker
-//  11 = Odd flicker
-// Interlace sync (scanlines on odd field half a scanline lower)
-//   2 = Sync (same data in both fields, inter-scanline gaps "filled in")
-//   3 = Sync and video (480i equivalent, e.g. 400 active scanlines)
-//   8 = Sync flicker
-//   9 = Sync video and flicker
-//  12 = Sync even
-//  13 = Sync odd
-//  14 = Sync even flicker
-//  15 = Sync odd flicker
-//  16 = Sync and video swapped
-//  17 = Sync video and flicker swapped
-// On a real MC6845 interlace mode 3 is the same as interlace mode 6, and the
-// IBM CGA card delays the vsync pulse to the next hsync so that interlace mode
-// 3 behaves as interlace video without interlace sync (and an extra scanline
-// every other frame). It's possible to add or remove interlace sync in
-// software, though, so we allow all 4 possible combinations in cga2ntsc.
+//   1 = Even odd (480i equivalent in combination with interlace sync)
+//   2 = Odd even (same but with fields swapped)
+//   3 = Even even (only show even scanlines)
+//   4 = Odd odd (only show odd scanlines)
 interlaceMode = 0;
+// Set to true to offset scanlines by half a line (to double vertical
+// resolution at the expense of halving the field rate):
+interlaceSync = false;
+// Set to true to alternate phase each field:
+interlacePhase = false;
+// Set to true to use different VRAM regions for even and odd fields:
+flicker = false;
 
 // Phase is relevant for improper +HRES modes (0x0b, 0x19 and 0x1b).
 // Phase 0 starts is 8 hdots further left and has different bit patterns.
