Add more matching options

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -98,10 +98,32 @@ characterSet = 3;
 // Quality for matching in text modes. 0 = fastest, 1 = best quality
 quality = 0.5;
 
-// Parameters for error diffusion in match mode.
-horizontalDiffusion = 0.5;
-verticalDiffusion = 0.5;
+// Parameters for error diffusion in match mode. This corresponds to diffusing
+// the error at a 45 degree angle with the default aspect ratio, since
+// 0.647565^12 ~= (1-0.647565)^5.
+horizontalDiffusion = 0.647565;
+verticalDiffusion = 0.352435; //1 - horizontalDiffusion;
 temporalDiffusion = 0;
+
+// Gamma correction. 0 for sRGB standard, 1 for no gamma correction.
+// Other values (e.g. 2.2) use power approximation.
+gamma = 0;
+
+// Target colour clipping mode:
+//  0 = no colour clipping
+//  1 = clip colour components separately
+//  2 = project towards center of colour cube
+clipping = 2;
+
+// Fitness metric:
+//  0 = sRGB
+//  1 = linear RGB
+//  2 = Fast colour distance metric from http://www.compuphase.com/cmetric.htm
+//  3 = Luv
+//  4 = CIE76
+//  5 = CIE94
+//  6 = CIEDE2000
+metric = 2;
 
 
 // CGA composite encoding options
