Config file persistence

--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -111,8 +111,9 @@ gamma = 0;
 
 // Target colour clipping mode:
 //  0 = no colour clipping
-//  1 = clip colour components separately
+//  1 = clip colour components separately to [0,1]
 //  2 = project towards center of colour cube
+//  3 = clip colour components separately to [-1,2]
 clipping = 2;
 
 // Fitness metric:
