--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -1,3 +1,7 @@
+//horizontalDiffusion = 0.647565;
+verticalDiffusion = 1 - horizontalDiffusion;
+
+
 // Input files
 
 inputPicture = arguments[1];
@@ -102,7 +106,7 @@ quality = 0.5;
 // the error at a 45 degree angle with the default aspect ratio, since
 // 0.647565^12 ~= (1-0.647565)^5.
 horizontalDiffusion = 0.647565;
-verticalDiffusion = 0.352435; //1 - horizontalDiffusion;
+verticalDiffusion = 1 - horizontalDiffusion;
 temporalDiffusion = 0;
 
 // Gamma correction. 0 for sRGB standard, 1 for no gamma correction.
