--- a/8088/cga/calibrate/cga2ntsc/default.config
+++ b/8088/cga/calibrate/cga2ntsc/default.config
@@ -1,6 +1,4 @@
-//horizontalDiffusion = 0.647565;
-verticalDiffusion = 1 - horizontalDiffusion;
-
+activeSize = Vector(640, 200);
 
 // Input files
 
