--- a/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
+++ b/8088/cga/calibrate/cga2ntsc/cga2ntsc.vcxproj.filters
@@ -140,6 +140,9 @@
     <ClInclude Include="..\..\..\..\include\alfe\double_functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\handle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="..\..\..\..\include\alfe.natvis" />
