--- a/8088/cga/calibrate/cgaart/default.config
+++ b/8088/cga/calibrate/cgaart/default.config
@@ -25,7 +25,7 @@ activeSize.y = inputPicture.size.y*(inputPicture.size.y <= 262 ? 2 : 1)/2;
 // Add 4 to any of these for to disable colour burst and carrier and use
 // red/cyan palette for 2bpp modes.
 // Add 0x20 in text modes to enable blinking and disable bright backgrounds.
-// cga2ntsc will not use the blink bit - this just prevents it from using
+// Matcher will not use the blink bit - this just prevents it from using
 // bright backgrounds.
 // The improper modes latch bytes at incorrect times, so have strange bit
 // patterns and require multiple passes to get optimal results.
@@ -46,16 +46,16 @@ palette = 0x0f;
 
 // In graphics modes, only the lowest bit of the scanline counter (CRTC "row
 // address") is used. It is used to select between the two 8kB regions of VRAM,
-// so for cga2ntsc purposes 1 and 2 are equivalent for graphics modes (except
-// for the way that data is laid out in RAM), and 3+ give repeated scanlines.
-// In text modes, the lowest 3 bits of the scanline counter give the scanline
+// so for cgaart purposes 1 and 2 are equivalent for graphics modes (except for
+// the way that data is laid out in RAM), and 3+ give repeated scanlines. In
+// text modes, the lowest 3 bits of the scanline counter give the scanline
 // within the character to look up in ROM, so 1 to 8 are useful (9+ give
 // repeated scanlines).
 scanlinesPerRow = 2;
 
 // Number of times to display each scanline. There are various hacks for
 // repeating scanlines, but not all repeat counts are possible in every
-// combination of mode and CRTC variant. cga2ntsc allows you to repeat each
+// combination of mode and CRTC variant. cgaart allows you to repeat each
 // scanline any number of times even though that may not be possible on a
 // real CGA card.
 scanlinesRepeat = 1;
