Pixel-perfect scaling

--- a/8088/cga/calibrate/cgaart/default.config
+++ b/8088/cga/calibrate/cgaart/default.config
@@ -161,19 +161,39 @@ aspectRatio = 5/6;  // Pixel aspect ratio of one ldot
 scanlineWidth = 1;  // Width of a scanline in units of "zoom" pixels
 overscan = 0.1; // Overscan to add on each edge, as fraction of active size
 
-// Scanline profiles
+// Scaler profiles
 //   0 = rectangle
 //   1 = triangle
 //   2 = circle
 //   3 = gaussian
 //   4 = sinc
+//   5 = box (nearest neighbour)
 scanlineProfile = 0;
+horizontalProfile = 0;
 // Scanline bleeding settings
 //   0 = none (clipping only, inaccurate colour)
 //   1 = down (fast)
 //   2 = symmetrical (good)
 scanlineBleeding = 2;
+horizontalBleeding = 2;
 zoom = 2;  // Output pixels per scanline vertically
+horizontalRollOff = 0;
+verticalRollOff = 0;
+subPixelSeparation = 1; // Positive for RGB, negative for BGR
+
+
+// Phosphor colour settings
+//   0 = colour
+//   1 = green
+//   2 = amber
+//   3 = white
+//   4 = blue
+phosphor = 0;
+// Mask settings
+//   0 = shadow mask
+//   1 = aperture grille
+mask = 0;
+maskSize = 0; // size of mask in scanlines
 
 
 // Set to false to convert and immediately exit without showing UI, for batch
