--- a/8088/cga/cgaart/default.config
+++ b/8088/cga/cgaart/default.config
@@ -153,6 +153,7 @@ showClipping = false;
 //   1 = 1 line
 //   2 = 2 line
 combFilter = 0;
+cutOff = 0.01;
 
 
 // Scaling and scanline options
@@ -179,6 +180,8 @@ horizontalBleeding = 2;
 zoom = 2;  // Output pixels per scanline vertically
 horizontalRollOff = 0;
 verticalRollOff = 0;
+horizontalCutOff = 0.01;
+verticalCutOff = 0.01;
 subPixelSeparation = 1; // Positive for RGB, negative for BGR
 
 
