Use lobes instead of cutoff, fix RGBI prescaling

--- a/8088/cga/cgaart/default.config
+++ b/8088/cga/cgaart/default.config
@@ -135,7 +135,8 @@ metric = 2;
 //   2 = Composite (new)
 // New CGA cards have a lower chroma amplitude and the text mode colours show
 // up as more different shades of grey on a monochrome monitor.
-connector = bitmapIsRGBI(inputPicture) ? 0 : 1;
+Boolean isRGBI = bitmapIsRGBI(inputPicture);
+connector = isRGBI ? 0 : 1;
 
 
 // NTSC decoding options
@@ -153,7 +154,7 @@ showClipping = false;
 //   1 = 1 line
 //   2 = 2 line
 combFilter = 0;
-cutOff = 0.01;
+lobes = 4;
 
 
 // Scaling and scanline options
@@ -171,6 +172,7 @@ overscan = 0.1; // Overscan to add on each edge, as fraction of active size
 //   5 = box (nearest neighbour)
 scanlineProfile = 0;
 horizontalProfile = 0;
+prescalerProfile = isRGBI ? 5 : 4;
 // Scanline bleeding settings
 //   0 = none (clipping only, inaccurate colour)
 //   1 = down (fast)
@@ -180,8 +182,8 @@ horizontalBleeding = 2;
 zoom = 2;  // Output pixels per scanline vertically
 horizontalRollOff = 0;
 verticalRollOff = 0;
-horizontalCutOff = 0.01;
-verticalCutOff = 0.01;
+horizontalLobes = 4;
+verticalLobes = 4;
 subPixelSeparation = 1; // Positive for RGB, negative for BGR
 
 
