Start of FIR matcher

--- a/8088/cga/cgaart/default.config
+++ b/8088/cga/cgaart/default.config
@@ -90,9 +90,11 @@ phase = 1;
 //   4 = 0xb1                  80x100x256
 //   5 = 0xb0/0xb1             80x100x512
 //   6 = 0x06/0x13/0x19/0x22/0x27/0x55/0x57/0x60/0xb6/0xdd
+//   7 = 0x0c/0x0d/0x21/0x35/0x55/0x6a/0xdd
 // Set 6 is all the characters with the same data on scanlines 0 and 1,
 // allowing us to do 200 1-scanline rows with no CPU time, or 100
 // duplicated-scanline rows with no CPU time
+// Set 7 has all possible combinations of double-wide pixels on scanline 0.
 characterSet = 3;
 
 // Quality for matching in text modes. 0 = fastest, 1 = best quality
