More box matching

--- a/8088/cga/cgaart/default.config
+++ b/8088/cga/cgaart/default.config
@@ -128,6 +128,20 @@ clipping = 1;
 //  6 = CIEDE2000
 metric = 2;
 
+// Number of hdots to look ahead. The matcher tries all possible combinations
+// within the look ahead region, so the matching time increases by a factor of
+// 2 (4 for +HRES 2bpp mode) each time this is increased. Higher numbers
+// eliminate artifacts in some cases.
+lookAhead = 3;
+
+// Combining adjacent hdots or scanlines and trying all possibilities within
+// the resulting can improve matching quality but takes longer.
+//  0 = No combinations (fastest)
+//  1 = Horizontal combinations for improper modes
+//  2 = Vertical combinations for more than 2 scanlines per row
+//  3 = Either (not both, as that would yield 4 billion possibilities).
+combinations = 3;
+
 
 // CGA composite encoding options
 
