--- a/8088/cga/cgaart/default.config
+++ b/8088/cga/cgaart/default.config
@@ -134,13 +134,12 @@ metric = 2;
 // eliminate artifacts in some cases.
 lookAhead = 3;
 
-// Combining adjacent hdots or scanlines and trying all possibilities within
-// the resulting can improve matching quality but takes longer.
-//  0 = No combinations (fastest)
-//  1 = Horizontal combinations for improper modes
-//  2 = Vertical combinations for more than 2 scanlines per row
-//  3 = Either (not both, as that would yield 4 billion possibilities).
-combinations = 3;
+// For graphics modes with more than 2 scanlines per row:
+//   set to true to process all scanlines within row at once
+//   set to false to process scanlines individually
+// Combining gives better results but is slower and limits the amount of
+// horizontal lookahead that can be used.
+combineScanlines = true;
 
 
 // CGA composite encoding options
