--- a/8088/cga/cgaart/cgaart.vcxproj
+++ b/8088/cga/cgaart/cgaart.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="..\..\..\include\alfe\hash_table.h" />
     <ClInclude Include="..\..\..\include\alfe\identifier.h" />
     <ClInclude Include="..\..\..\include\alfe\integer_functions.h" />
+    <ClInclude Include="..\..\..\include\alfe\integer_types.h" />
     <ClInclude Include="..\..\..\include\alfe\knob.h" />
     <ClInclude Include="..\..\..\include\alfe\linked_list.h" />
     <ClInclude Include="..\..\..\include\alfe\main.h" />
