Advance UI and fixes

--- a/8088/cga/cgaart/default.config
+++ b/8088/cga/cgaart/default.config
@@ -134,6 +134,15 @@ metric = 2;
 // eliminate artifacts in some cases.
 lookAhead = 3;
 
+// Number of hdots to move right after each matching block. Higher numbers may
+// be faster but may also introduce artifacts in some cases.
+//  0 = 1 hdot
+//  1 = 2 hdots
+//  2 = 4 hdots
+//  3 = 8 hdots
+//  4 = 16 hdots
+advance = 2;
+
 // For graphics modes with more than 2 scanlines per row:
 //   set to true to process all scanlines within row at once
 //   set to false to process scanlines individually
