--- a/log_compare/log_compare.vcxproj
+++ b/log_compare/log_compare.vcxproj
@@ -153,6 +153,9 @@
     <ClInclude Include="..\include\alfe\hash_table.h" />
     <ClInclude Include="..\include\alfe\space.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\include\alfe.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
