--- a/8088/reem/reem.vcxproj.filters
+++ b/8088/reem/reem.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="span.cpp">
+    <ClCompile Include="reem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
