--- a/8088/reem/reem.vcxproj
+++ b/8088/reem/reem.vcxproj
@@ -148,6 +148,9 @@
   <ItemGroup>
     <ClCompile Include="reem.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\include\alfe.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
