--- a/8088/reem/reem.vcxproj.filters
+++ b/8088/reem/reem.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="..\..\include\alfe\user.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\alfe\expression.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
