--- a/8088/demo/cga/span/span.vcxproj.filters
+++ b/8088/demo/cga/span/span.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="..\..\..\..\include\alfe\vectors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\fix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
