Comparing fixed-point and floating-point span

--- a/8088/demo/cga/span/span.vcxproj
+++ b/8088/demo/cga/span/span.vcxproj
@@ -154,7 +154,9 @@
     <ClInclude Include="..\..\..\..\include\alfe\bitmap.h" />
     <ClInclude Include="..\..\..\..\include\alfe\cga.h" />
     <ClInclude Include="..\..\..\..\include\alfe\fix.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\image_filter.h" />
     <ClInclude Include="..\..\..\..\include\alfe\main.h" />
+    <ClInclude Include="..\..\..\..\include\alfe\scanlines.h" />
     <ClInclude Include="..\..\..\..\include\alfe\user.h" />
     <ClInclude Include="..\..\..\..\include\alfe\vectors.h" />
   </ItemGroup>
