--- a/8088/demo/cga/span/span.vcxproj.filters
+++ b/8088/demo/cga/span/span.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="..\..\..\..\include\alfe\fix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\image_filter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\scanlines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
