--- a/8088/demo/cga/span/span.vcxproj.filters
+++ b/8088/demo/cga/span/span.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="..\..\..\..\include\alfe\scanlines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\include\alfe\integer_types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
