--- a/8088/xtce/xtce.vcxproj
+++ b/8088/xtce/xtce.vcxproj
@@ -146,6 +146,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="xtce.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\include\alfe\cga.h" />
+    <ClInclude Include="..\..\include\alfe\main.h" />
+    <ClInclude Include="..\..\include\alfe\thread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
