Initial tile data

--- a/8088/game/cpp/u6conv/u6conv.vcxproj.filters
+++ b/8088/game/cpp/u6conv/u6conv.vcxproj.filters
@@ -15,11 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="game.cpp">
+    <ClCompile Include="u6conv.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Natvis Include="..\..\..\include\alfe.natvis" />
   </ItemGroup>
 </Project>
