Fix composite text matching

--- a/8088/cga/cgaart/u6conv.config
+++ b/8088/cga/cgaart/u6conv.config
@@ -13,7 +13,7 @@ interlaceSync = false;
 interlacePhase = false;
 flicker = false;
 phase = 1;
-characterSet = 1;
+characterSet = 3;
 quality = 1.000000;
 horizontalDiffusion = 0.648000;
 verticalDiffusion = 0.352000;
@@ -40,7 +40,7 @@ horizontalProfile = 0;
 prescalerProfile = 4;
 lookAhead = 3;
 advance = 2;
-diffuseInternally = false;
+diffuseInternally = true;
 combineScanlines = true;
 scanlineBleeding = 2;
 horizontalBleeding = 2;
