More collision detection

--- a/8088/game/cpp/game.vcxproj.filters
+++ b/8088/game/cpp/game.vcxproj.filters
@@ -22,4 +22,9 @@
   <ItemGroup>
     <Natvis Include="..\..\..\include\alfe.natvis" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="u6conv\collisionData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
