--- a/8088/game/cpp/game.vcxproj
+++ b/8088/game/cpp/game.vcxproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <Natvis Include="..\..\..\include\alfe.natvis" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="u6conv\collisionData.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
