--- a/8088/cga/transition/transition.vcxproj
+++ b/8088/cga/transition/transition.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="transition.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\include\alfe\cga.h" />
     <ClInclude Include="..\..\..\include\alfe\file.h" />
     <ClInclude Include="..\..\..\include\alfe\find_handle.h" />
   </ItemGroup>
