--- a/8088/cga/transition/transition.vcxproj.filters
+++ b/8088/cga/transition/transition.vcxproj.filters
@@ -30,4 +30,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\..\include\alfe.natvis" />
+  </ItemGroup>
 </Project>
