More transition stuff

--- a/8088/cga/transition/default.config
+++ b/8088/cga/transition/default.config
@@ -35,6 +35,10 @@ fadeHalfSteps = 5;
 
 fadeFrames = 120;
 
+// Which characters are used for fades 6 and 7.
+
+characterSet = "b1/b0/1d/7e/7f";
+
 
 // Wipe options:
 
@@ -42,6 +46,7 @@ fadeFrames = 120;
 //   0 = vertical, top-to-bottom.
 //   1 = random (same as 2 but with smoothness 0).
 //   2 = blobby
+//   3 = gradientMap
 
 wipeNumber = 2;
 
@@ -53,6 +58,12 @@ smoothness = 40000000;
 // image. The transition takes fadeFrames+wipeFrames frames in total.
 
 wipeFrames = 229;
+
+// Gradient map bitmap (a 24-bit .png file, only green channel is used). Must
+// be 80x100.
+
+gradientMap = "gradientMap.png";
+
 
 
 // Computing how many wipeFrames we need:
