More asm transition work

--- a/8088/cga/transition/default.config
+++ b/8088/cga/transition/default.config
@@ -1,6 +1,7 @@
 // Fade options:
 
 // The type of fade to do:
+//  -1 = user attribute-only fade - see fadeRGBI.
 //   0 = attribute-only fade via black, using nearest RGBI colour to proper
 //       fade.
 //   1 = same as 0 but only looks at luminosity of RGBI colour to form ramp.
@@ -17,7 +18,7 @@
 //       linear RGB cube). Possibly decreases banding at the expense of less
 //       accurate colours. Probably not noticably different from 6.
 
-fadeNumber = 6;
+fadeNumber = 7;
 
 // For attribute-only fades (numbers 0-5), this is the number of steps in each
 // half of the transition (e.g. from initial picture to black). One extra step
@@ -33,11 +34,22 @@ fadeHalfSteps = 5;
 // will perform all steps) or smaller than the number of steps (in which case
 // a more complicated assembly routine will need to be used).
 
-fadeFrames = 120;
+fadeFrames = 90;
 
 // Which characters are used for fades 6 and 7.
 
-characterSet = "b1/b0/1d/7e/7f";
+characterSet = "b1/8e/b0/1d/14/7f";
+
+// User attribute fade pattern for fadeNumber -1. Each row is a step and has
+// the RGBI colours in order as a hex digit for each. For example, the
+// following fade zeros the bits in order B, I, G, R:
+
+fadeRGBI =
+  "0000000000000000" +
+  "0000444400004444" +
+  "0022446600224466" +
+  "0022446688aaccee" +
+  "0123456789abcdef";
 
 
 // Wipe options:
@@ -84,7 +96,7 @@ gradientMap = "gradientMap.png";
 // Fades 0-2 use a single table of 256*fadeHalfSteps bytes.
 // Fades 3-5 use a single table of 4096*fadeHalfSteps bytes, plus 4000 bytes
 //   on disk (and 8000 bytes in RAM) per image pair.
-// Fades 6-7 use 5kB of fixed tables plus 9000 bytes on disk per image plus
+// Fades 6-7 use 2.5kB of fixed tables plus 9000 bytes on disk per image plus
 //   32000 bytes of RAM per image pair.
 // Each wipe pattern will take 16000 bytes on disk and in RAM.
 // We will also need ~10kB of RAM for a frame's worth of unrolled code.
